# Camera-of-LiaoNing-Robocon-2017

./: .gitignore  ActCamera.sln  CMakeLists.txt  README.md  piInstall.txt
ActCamera/: ActCamera.vcxproj  camera.cpp  camera.h  debug.h  main.cpp  videoconfig.h
ActCamera2.0/: ActCamera2.0.sln
ActCamera2.0/ActCamera2.0/: ActCamera2.0.vcxproj
ActCamera2.0/ActCamera2.0/src/: camera.cpp  camera.h
src/: debug.h  main.cpp
